// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`omf motion reports should report a duplicated motion 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "omf",
    "duplicate-motion",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/duplicated.omf",
    "from": "idle",
    "isPlayOnce": false,
    "motions": 4,
    "source": "<resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "to": "idle_copy",
  },
}
`;

exports[`omf motion reports should report a filter dry run as one that wrote nothing 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "omf",
    "filter-motions",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/never-written.omf",
    "isDry": true,
    "kept": [
      "idle",
    ],
    "source": "<resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "total": 3,
  },
}
`;

exports[`omf motion reports should report a repack 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "omf",
    "repack",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/repacked.omf",
    "readDuration": "<duration>",
    "source": "<resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "writeDuration": "<duration>",
  },
}
`;

exports[`omf motion reports should report renamed motions 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "omf",
    "rename-motions",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/renamed.omf",
    "isDry": false,
    "motions": [
      "stand",
      "fire",
      "svd_reload",
    ],
    "renamed": 2,
    "source": "<resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
  },
}
`;

exports[`omf motion reports should report which motions a filter kept 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "omf",
    "filter-motions",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/kept-idle.omf",
    "isDry": false,
    "kept": [
      "idle",
    ],
    "source": "<resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "total": 3,
  },
}
`;
